Rename asset folder and Add Logo Images

--- a/incident_tracker_flutter/pubspec.yaml
+++ b/incident_tracker_flutter/pubspec.yaml
@@ -26,12 +26,16 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - images/
+
   fonts:
     - family: NotoSansCJKkr
       fonts:
-        - asset: assets/fonts/noto_sans_cjk_kr_black.otf
-        - asset: assets/fonts/noto_sans_cjk_kr_bold.otf
-        - asset: assets/fonts/noto_sans_cjk_kr_medium.otf
+        - asset: fonts/noto_sans_cjk_kr_black.otf
+        - asset: fonts/noto_sans_cjk_kr_bold.otf
+        - asset: fonts/noto_sans_cjk_kr_medium.otf
     - family: Blanka
       fonts:
-        - asset: assets/fonts/blanka_regular.otf
+        - asset: fonts/blanka_regular.otf
