Fix some code for google auth

--- a/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
+++ b/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.teamnolja.incident_tracker_flutter">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
         android:label="incident_tracker_flutter"
         android:icon="@mipmap/ic_launcher">
