--- a/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
+++ b/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
+       android:usesCleartextTraffic="true"
         android:label="incident_tracker_flutter"
         android:icon="@mipmap/ic_launcher">
         <activity
