Add Launcher Icon

--- a/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
+++ b/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
    <application
        android:usesCleartextTraffic="true"
         android:label="incident_tracker_flutter"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
