--- a/incident_tracker_flutter/pubspec.yaml
+++ b/incident_tracker_flutter/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^0.7.4
   google_sign_in: ^5.0.1
   kakao_flutter_sdk: ^0.6.0-beta.2
+  flutter_launcher_icons: ^0.9.0
 
 dev_dependencies:
   flutter_test:
@@ -53,3 +54,8 @@ flutter:
     - family: Profile
       fonts:
         - asset: fonts/Profile.ttf
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/launcher_logo.jpg"
