--- a/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
+++ b/incident_tracker_flutter/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
    <application
-       android:usesCleartextTraffic="true"
+        android:usesCleartextTraffic="true"
+        android:requestLegacyExternalStorage="true"
         android:label="incident_tracker_flutter"
         android:icon="@mipmap/launcher_icon">
         <activity
