--- a/incident_tracker_flutter/pubspec.yaml
+++ b/incident_tracker_flutter/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   logging: ^1.0.1
   image_picker: ^0.7.4
   google_sign_in: ^5.0.1
-  kakao_flutter_sdk: ^0.6.0-beta.2
+  kakao_flutter_sdk: ^0.6.3
   flutter_launcher_icons: ^0.9.0
+  flutter_webview_plugin: ^0.3.11
 
 dev_dependencies:
   flutter_test:
