--- a/incident_tracker_flutter/pubspec.yaml
+++ b/incident_tracker_flutter/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   kakao_flutter_sdk: ^0.6.3
   flutter_launcher_icons: ^0.9.0
   flutter_webview_plugin: ^0.3.11
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
