--- a/incident_tracker_flutter/pubspec.yaml
+++ b/incident_tracker_flutter/pubspec.yaml
@@ -11,17 +11,14 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+
   get: ^4.1.3
   dio: ^4.0.0
   carousel_slider: ^4.0.0-nullsafety.0
-  permission_handler: ^6.1.1
-  logging: ^1.0.1
   image_picker: ^0.7.4
-  google_sign_in: ^5.0.1
-  kakao_flutter_sdk: ^0.6.3
-  flutter_launcher_icons: ^0.9.0
-  flutter_webview_plugin: ^0.3.11
-  shared_preferences: ^2.0.5
+  intl: ^0.17.0
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
 
 dev_dependencies:
   flutter_test:
